spade-tests/src/snapshots/spade_tests__parser__no_reg_in_function.snap
---
source: spade-tests/src/parser.rs
assertion_line: 115
---
fn a(clk: clock) -> int<8> {
    reg(clk) x = 10;
    x
}

error: Functions cannot contain registers
  ┌─ testinput:2:5
  │
1 │ fn a(clk: clock) -> int<8> {
  │ -- Because this is a function
2 │     reg(clk) x = 10;
  │     ^^^ reg not allowed here
  │
  = Functions can only contain combinatorial logic
  = If you want to do this, make the function an entity


